# nonebot-plugin-ff14bot-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: DEPLOY_ZH.md  deploy-beginner.zh-cn.md  deploy-napcat.zh-cn.md  deploy-windows.zh-cn.md  deploy.zh-cn.md
nonebot_plugin_ff14bot_bridge/: __init__.py  config.py  service.py
tests/: test_ff14_bridge.py
